# E16DST1_run1a_1stprod

./: #CMakeLists.txt#  .CMakeLists.txt.swp  .gitignore  .gitmodules  2  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.org  Changelog  E16DST_DST1DefaultFilePath.hh  Makefile  README.md  cmake_install.cmake  makefile  makefile~
E16ANA_Basic/: #CMakeLists.txt#  CMakeLists.txt
E16ANA_Basic/database/calib_database/: E16calibDB-210817.txt  E16calibDB-210913.txt  E16calibDB-210916.txt  E16calibDB-210919.txt  E16calibDB-210922.txt  E16calibDB-210927.txt  E16calibDB-210928.txt  E16calibDB-211002.txt  E16calibDB.txt
E16ANA_Basic/database/calib_database/index/: index-GTR-pedestal-210818.txt  index-GTR-pedestal-210910.txt  index-HBD-calib-status-210831.txt  index-HBD-cut-210831.txt  index-HBD-dead-ch-210831.txt  index-HBD-gain-210831.txt  index-HBD-pedestal-210831.txt  index-HBD-waveform-template-210831.txt  index-LG-WFtemplate-210916.txt  index-LG-channelmap-210818.txt  index-LG-deadch-210927.txt  index-LG-drs4assign-210818.txt  index-LG-gainbych-210831.txt  index-LG-t0bych-210922.txt  index-SSD-pedestal-210619.txt  index-SSD-pedestal-210619.txt~  index-SSD-pedestal-210923.txt  index-SSD-time-210922.txt  index-Target-pos-210709.txt  index-TargetInfo-210709-design.txt  index-Trigger-param-210817.txt  index-Trigger-param-210818.txt  index-Trigger-param-210819.txt  index-Trigger-param-210820.txt  index-fieldmap-210901.txt  index-geometry-210901.txt
E16ANA_Basic/database/geometry_database/kawama/: geometry.dat_20131024
E16ANA_Basic/database/geometry_database/v2/geometry_210804/: README
E16ANA_Basic/include/: E16ANA_CalibDBManager.hh  E16ANA_Constant.hh  E16ANA_EventSelect.hh  E16ANA_FieldMapCalib.hh  E16ANA_G4OutputData.hh  E16ANA_GTRLorentzAngleCalib.hh  E16ANA_GTRLorentzCorrection.hh  E16ANA_GTRTemplatePulseCalib.hh  E16ANA_GTRcalib.hh  E16ANA_Geometry.hh  E16ANA_GeometryV2.hh  E16ANA_MockTrackOutputData.hh  E16ANA_MultiTrack.hh  E16ANA_ParamManager.hh  E16ANA_RundependentName.hh  E16ANA_SSDcalib.hh  E16ANA_STSADCCalibration.hh  E16ANA_STSDeadChannel.hh  E16ANA_STSGlobalGeometry.hh  E16ANA_STSGlobalGeometryCalib.hh  E16ANA_STSGlobalGeometry_v2.hh  E16ANA_STSTDCCalibration.hh  E16ANA_SimulatedHits.hh  E16ANA_StepTrack.hh  E16ANA_Transform.hh  E16ANA_WaveformFitManager.hh  E16ANA_WaveformFitter.hh  E16ANA_WaveformGenData.hh  E16ANA_WaveformOutputData.hh  exprtk.hpp
E16ANA_Basic/src/: .E16ANA_MultiTrack.cc.swp  E16ANA_CalibDBManager.cc  E16ANA_EventSelect.cc  E16ANA_FieldMapCalib.cc  E16ANA_G4OutputData.cc  E16ANA_GTRLorentzAngleCalib.cc  E16ANA_GTRLorentzCorrection.cc  E16ANA_GTRLorentzCorrection.cc.0428  E16ANA_GTRLorentzCorrection.cc.run0e  E16ANA_GTRLorentzCorrection.cc.v12  E16ANA_GTRcalib.cc  E16ANA_Geometry.cc  E16ANA_GeometryV2.cc  E16ANA_MagneticFieldMap.cc  E16ANA_MockTrackOutputData.cc  E16ANA_MultiTrack.cc  E16ANA_ParamManager.cc  E16ANA_SSDcalib.cc  E16ANA_STSADCCalibration.cc  E16ANA_STSDeadChannel.cc  E16ANA_STSGlobalGeometry.cc  E16ANA_STSGlobalGeometry.cc.morino  E16ANA_STSGlobalGeometry.cc.nakai  E16ANA_STSGlobalGeometry.cc.run0e  E16ANA_STSGlobalGeometryCalib.cc  E16ANA_STSGlobalGeometry_v2.cc  E16ANA_STSTDCCalibration.cc  E16ANA_StepTrack.cc  E16ANA_TargetInfo.cc  E16ANA_Transform.cc  E16ANA_Waveform2dFitter.cc  E16ANA_WaveformFitManager.cc  E16ANA_WaveformFitter.cc  E16ANA_WaveformOutputData.cc  E16ANA_WaveformTemplate.cc
E16ANA_Basic/usr/: FMfieldDump.cc  MakeSSDCalibfile.cc  calibSample.cc  geometryTest.cc  mockdataIOtestSimple.cc  targetInfoTest.cc
E16ANA_CalibDB/: CMakeLists.txt  Makefile  cmake_install.cmake
E16ANA_CalibDB/calib_database/: E16calibDB-210818.txt  E16calibDB-210819.txt  E16calibDB-210820.txt  E16calibDB-210831.txt  E16calibDB-210910.txt  E16calibDB-210922.txt  E16calibDB.txt
E16ANA_CalibDB/calib_database/GTR/pedestal/210910/: gtr_pedestal_030202.txt  gtr_pedestal_030799.txt
E16ANA_CalibDB/calib_database/LG/WFtemplate/210916/: LG-WFtemplate-run39999-210916.txt
E16ANA_CalibDB/calib_database/LG/drs4assign/210818/: LG-drs4assign-run20178-210818.txt  LG-drs4assign-run39999-210818.txt
E16ANA_CalibDB/calib_database/LG/gainbych/210831/: LG-gainbych-run39999-210831.txt
E16ANA_CalibDB/calib_database/index/: index-LG-specmap-210818.txt  index-LG-t0bych-210831.txt  index-LG-timeoffset-210818.txt  index-SSD-pedestal-210922.txt  index-SSD-time-210808-sample.txt  index-Target-pos-210709.txt  index-Trigger-param-210817.txt
E16ANA_CalibDB/database/: E16calibDB.txt
E16ANA_CalibDB/database/index/: index-SSD-pedestal-210619.txt  index-Target-pos-210709.txt
E16ANA_CalibDB/examples/: calibSample.cc  targetInfoTest.cc
E16ANA_CalibDB/include/: E16ANA_CalibDBManager.hh  E16ANA_ErrorMessage.hh  E16ANA_GTRcalib.hh  E16ANA_SSDcalib.hh  E16ANA_TargetInfo.hh
E16ANA_CalibDB/src/: #E16ANA_CalibDBManager.cc#  E16ANA_CalibDBManager.cc  E16ANA_CalibDBManager.cc.bak  E16ANA_GTRcalib.cc  E16ANA_SSDcalib.cc  E16ANA_TargetInfo.cc
E16ANA_ErrorMessage/: CMakeLists.txt
E16ANA_Geometry/: CMakeLists.txt  Makefile  cmake_install.cmake
E16ANA_Geometry/include/: E16ANA_GeometryV2.hh
E16ANA_Geometry/src/: E16ANA_GeometryV2.cc
E16ANA_RundependentName/: CMakeLists.txt
E16ANA_RundependentName/examples/: rundependentNameTest.cc
E16ANA_RundependentName/src/: E16ANA_RundependentName.cc
E16DST/: ChangeLog  (+12 more)
E16DST-bk/: CMakeLists.txt  E16DST_Constant.hh  E16DST_File.hh  E16DST_GTRConnection.cc  E16DST_LGChannelMap.cc  E16DST_LGChannelMap.hh  E16DST_STSChannelMap.hh  E16DST_STSChannelMapManager.cc  E16DST_TriggerChannelMap.cc  Makefile  SRSATCAChannelMap.h
E16DST-bk/channel_map/CT/: ch_pp_CT_run0e.txt
E16DST-bk/channel_map/ELPH2021/: ip_to_detector.txt
E16DST-bk/channel_map/HBD/: HBD_ch_table_run0b.tab  HBD_ch_table_run0d.tab
E16DST-bk/channel_map/LG/: pp_map.txt
E16DST-bk/channel_map/SRS_ATCA/: ip_to_detector.txt
E16DST-bk/channel_map/STS/: gbt_module_Run0e_1.csv  gbt_module_runmap.csv
E16DST-bk/channel_map/Trigger/: trgGtr.txt
E16DST-bk/channel_map/Trigger/run0a_0c/: trgLgc.txt
E16DST-bk/channel_map/Trigger/run0d/: trgHbd.txt  trgLgc.txt
(+513 files in other folders)
